[package]
name = 'pallet-note'
authors = ['David Rhodus']
edition = '2018'
version = '3.0.0'
readme = 'README.md'



[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-io = {version = "3.0.0", default-features = false}
pallet-randomness-collective-flip = {version = "3.0.0", default-features = false}

sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { version = "3.0.0", default-features = false }


[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'pallet-randomness-collective-flip/std',
	'sp-std/std',
	    "sp-runtime/std",

]

